[gd_scene load_steps=3 format=1]

[ext_resource path="res://scripts/title_screen.gd" type="Script" id=1]
[ext_resource path="res://scripts/battle.gd" type="Script" id=2]

[node name="Node" type="Node"]

script/script = ExtResource( 1 )

[node name="Panel" type="Panel" parent="."]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 1.0
margin/top = -2.0
margin/right = 1026.0
margin/bottom = 599.0

[node name="newGame" type="Button" parent="."]

rect/scale = Vector2( 2, 2 )
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 339.0
margin/top = 93.0
margin/right = 517.0
margin/bottom = 139.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
text = "new game"
flat = false

[node name="dataEditor" type="Button" parent="."]

rect/scale = Vector2( 2, 2 )
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 73.0
margin/top = 249.0
margin/right = 251.0
margin/bottom = 295.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
text = "data editor"
flat = false

[node name="Node" type="Node" parent="."]

[node name="scriptHolder" type="Node" parent="."]

script/script = ExtResource( 2 )

[connection signal="pressed" from="newGame" to="." method="_on_newGame_pressed"]

[connection signal="pressed" from="dataEditor" to="." method="_on_dataEditor_pressed"]


